Fixed height on container to make business names sit vertically aligned

--- a/themes/collabco_theme/css/style.css
+++ b/themes/collabco_theme/css/style.css
@@ -1900,6 +1900,10 @@ body.node-type-conversation h1#page-title {
   width: 50%;
 }
 
+.view-member-organisations .ui-organisation-img {
+  height:100px;
+}
+
 .fieldset-title {
   font-size: 0.7em;
 }
